Complete header part

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
   </head>
 
   <body>
-   
-  </body>
+<header>
+    <div class ="logo">
+        Header Logo
+    </div>
+    <div class = "links">
+        <div> header link one</div>
+        <div> header link two</div>
+        <div> header link three</div>
+    </div>
+</header>
+<div class="content">
+
+</div>
+<footer>
+</footer>  </body>
 </html>
