--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
   </head>
 
   <body>
-<header>
-    <div class ="logo">
-        Header Logo
+    
+    <div class="header">
+      <div class="logo">Header Logo</div>
+      <div class="links">
+        <div>header link one</div>
+        <div>header link two</div>
+        <div>header link three</div>
+      </div>
     </div>
-    <div class = "links">
-        <div> header link one</div>
-        <div> header link two</div>
-        <div> header link three</div>
+    <div class="content">
+      <div class="top"></div>
+      <div class="information"></div>
+      <div class="inspiration"></div>
+      <div class="action"></div>
     </div>
-</header>
-<div class="content">
-
-</div>
-<footer>
-</footer>  </body>
+    <div class="footer">Copyright @ The Odin Project 2021</div>
+  
+  </body>
 </html>
