Complete top content box

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   </head>
 
   <body>
-    
     <div class="header">
       <div class="logo">Header Logo</div>
       <div class="links">
@@ -21,12 +20,24 @@
       </div>
     </div>
     <div class="content">
-      <div class="top"></div>
+      <div class="top">
+        <div class="top-left">
+          <div class="top-header">Top header content</div>
+          <div class="top-content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et eros
+            justo. Nunc purus justo, finibus eu ipsum ac, dictum interdum purus.
+            Fusce ipsum purus, iaculis imperdiet sollicitudin nec, tincidunt
+            vitae ligula. Ut tincidunt augue sed ex facilisis, nec faucibus
+            lorem fermentum. 
+          </div>
+          <button class="top-button">Sign up</button>
+        </div>
+        <img src="./randy-tarampi-U2eUlPEKIgU-unsplash.jpg" class="top-right" />
+      </div>
       <div class="information"></div>
       <div class="inspiration"></div>
       <div class="action"></div>
     </div>
     <div class="footer">Copyright @ The Odin Project 2021</div>
-  
   </body>
 </html>
