Complete information box with pictures

--- a/index.html
+++ b/index.html
@@ -34,7 +34,33 @@
         </div>
         <img src="./randy-tarampi-U2eUlPEKIgU-unsplash.jpg" class="top-right" />
       </div>
-      <div class="information"></div>
+      <div class="information-container">
+          <div class ="information">
+            Some Random Information
+          </div>
+          <div class="pictures-container">
+            <div class="picture-box">
+            <img src="./cristofer-maximilian-NSKP7Gwa_I0-unsplash.jpg" class="pictures">
+            <div class="subtext"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et eros
+              justo. Nunc purus justo, finibus eu ipsum ac, dictum interdum purus.</div>
+          </div>
+          <div class="picture-box">
+            <img src="./drew-beamer-Vc1pJfvoQvY-unsplash.jpg" class="pictures">
+            <div class="subtext"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et eros
+              justo. Nunc purus justo, finibus eu ipsum ac, dictum interdum purus.</div>
+          </div>
+          <div class="picture-box">
+            <img src="./hello-i-m-nik-z1d-LP8sjuI-unsplash.jpg" class="pictures">
+            <div class="subtext"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et eros
+              justo. Nunc purus justo, finibus eu ipsum ac, dictum interdum purus.</div>
+          </div>
+          <div class="picture-box">
+            <img src="./mika-baumeister-Y_LgXwQEx2c-unsplash.jpg" class="pictures">
+            <div class="subtext"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et eros
+              justo. Nunc purus justo, finibus eu ipsum ac, dictum interdum purus.</div>
+          </div>
+          </div>
+      </div>
       <div class="inspiration"></div>
       <div class="action"></div>
     </div>
