--- a/index.html
+++ b/index.html
@@ -28,40 +28,72 @@
             justo. Nunc purus justo, finibus eu ipsum ac, dictum interdum purus.
             Fusce ipsum purus, iaculis imperdiet sollicitudin nec, tincidunt
             vitae ligula. Ut tincidunt augue sed ex facilisis, nec faucibus
-            lorem fermentum. 
+            lorem fermentum.
           </div>
           <button class="top-button">Sign up</button>
         </div>
         <img src="./randy-tarampi-U2eUlPEKIgU-unsplash.jpg" class="top-right" />
       </div>
       <div class="information-container">
-          <div class ="information">
-            Some Random Information
-          </div>
-          <div class="pictures-container">
-            <div class="picture-box">
-            <img src="./cristofer-maximilian-NSKP7Gwa_I0-unsplash.jpg" class="pictures">
-            <div class="subtext"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et eros
-              justo. Nunc purus justo, finibus eu ipsum ac, dictum interdum purus.</div>
+        <div class="information">Some Random Information</div>
+        <div class="pictures-container">
+          <div class="picture-box">
+            <img
+              src="./cristofer-maximilian-NSKP7Gwa_I0-unsplash.jpg"
+              class="pictures"
+            />
+            <div class="subtext">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et
+              eros justo. Nunc purus justo, finibus eu ipsum ac, dictum interdum
+              purus.
+            </div>
           </div>
           <div class="picture-box">
-            <img src="./drew-beamer-Vc1pJfvoQvY-unsplash.jpg" class="pictures">
-            <div class="subtext"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et eros
-              justo. Nunc purus justo, finibus eu ipsum ac, dictum interdum purus.</div>
+            <img
+              src="./drew-beamer-Vc1pJfvoQvY-unsplash.jpg"
+              class="pictures"
+            />
+            <div class="subtext">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et
+              eros justo. Nunc purus justo, finibus eu ipsum ac, dictum interdum
+              purus.
+            </div>
           </div>
           <div class="picture-box">
-            <img src="./hello-i-m-nik-z1d-LP8sjuI-unsplash.jpg" class="pictures">
-            <div class="subtext"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et eros
-              justo. Nunc purus justo, finibus eu ipsum ac, dictum interdum purus.</div>
+            <img
+              src="./hello-i-m-nik-z1d-LP8sjuI-unsplash.jpg"
+              class="pictures"
+            />
+            <div class="subtext">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et
+              eros justo. Nunc purus justo, finibus eu ipsum ac, dictum interdum
+              purus.
+            </div>
           </div>
           <div class="picture-box">
-            <img src="./mika-baumeister-Y_LgXwQEx2c-unsplash.jpg" class="pictures">
-            <div class="subtext"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et eros
-              justo. Nunc purus justo, finibus eu ipsum ac, dictum interdum purus.</div>
+            <img
+              src="./mika-baumeister-Y_LgXwQEx2c-unsplash.jpg"
+              class="pictures"
+            />
+            <div class="subtext">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et
+              eros justo. Nunc purus justo, finibus eu ipsum ac, dictum interdum
+              purus.
+            </div>
           </div>
-          </div>
+        </div>
       </div>
-      <div class="inspiration"></div>
+      <div class="inspiration">
+      <div class="quote">
+        Praesent dictum auctor fringilla. Class aptent taciti sociosqu ad litora
+        torquent per conubia nostra, per inceptos himenaeos. Morbi leo massa,
+        congue interdum elementum at, pharetra non dui. Nam viverra convallis
+        neque, ut faucibus metus.
+      </div>
+      <div class="writer">
+        -Lorem Ipsum
+      </div>
+      </div>
       <div class="action"></div>
     </div>
     <div class="footer">Copyright @ The Odin Project 2021</div>
