--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
           <button class="top-button">Sign up</button>
         </div>
-        <img src="./randy-tarampi-U2eUlPEKIgU-unsplash.jpg" class="top-right" />
+        <img src="./drew-beamer-Vc1pJfvoQvY-unsplash.jpg" class="top-right" />
       </div>
       <div class="information-container">
         <div class="information">Some Random Information</div>
@@ -50,7 +50,7 @@
           </div>
           <div class="picture-box">
             <img
-              src="./drew-beamer-Vc1pJfvoQvY-unsplash.jpg"
+              src="./randy-tarampi-U2eUlPEKIgU-unsplash.jpg"
               class="pictures"
             />
             <div class="subtext">
@@ -84,17 +84,23 @@
         </div>
       </div>
       <div class="inspiration">
-      <div class="quote">
-        Praesent dictum auctor fringilla. Class aptent taciti sociosqu ad litora
-        torquent per conubia nostra, per inceptos himenaeos. Morbi leo massa,
-        congue interdum elementum at, pharetra non dui. Nam viverra convallis
-        neque, ut faucibus metus.
+        <div class="quote">
+          Praesent dictum auctor fringilla. Class aptent taciti sociosqu ad
+          litora torquent per conubia nostra, per inceptos himenaeos. Morbi leo
+          massa, congue interdum elementum at, pharetra non dui. Nam viverra
+          convallis neque, ut faucibus metus.
+        </div>
+        <div class="writer">-Lorem Ipsum</div>
       </div>
-      <div class="writer">
-        -Lorem Ipsum
+      <div class="action">
+        <div class="action-message">
+          <div class="firstAction">Call to action! It's time!</div>
+          <div class="secondAction">
+            Sign up for our product by clicking that button right over there!
+          </div>
+        </div>
+        <button class="top-button">Sign up</button>
       </div>
-      </div>
-      <div class="action"></div>
     </div>
     <div class="footer">Copyright @ The Odin Project 2021</div>
   </body>
